--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
 {
+  "name": "homework",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "concurrently \"json-server -p 8080 -w db.json\" \"vite\"",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "axios": "^1.6.8",
+    "concurrently": "^8.2.2",
+    "moment": "^2.30.1",
+    "sass": "^1.75.0",
+    "swiper": "^11.1.1",
+    "vite": "^5.1.4"
+  },
   "dependencies": {
-    "canvas-confetti": "^1.9.2"
+    "json-server": "^1.0.0-alpha.23"
   }
 }
